--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
+
+img{
+  width: 700px;
+  height: 450px;
+  float: left;
+  
+}
 h1{
-  color: blueviolet;
+  background-color: green;
+  color: beige;
+  text-align:left;
+  float: left;
+}
+p{
+  font-size: 30px;
+ margin-top: 160px;
+ background-color:yellow;
+ color: black;
+ float: right;
+
 }
